--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,31 +14,32 @@ endif ()
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-# --- Google test stuff
-set(GOOGLETEST_ROOT ${PROJECT_SOURCE_DIR}/external/googletest/googletest CACHE STRING "Google Test source root")
-set(GOOGLEMOCK_ROOT ${PROJECT_SOURCE_DIR}/external/googletest/googlemock CACHE STRING "Google Mock source root")
-
-include_directories(
-        ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}
-        ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/include
-        ${PROJECT_SOURCE_DIR}/${GOOGLEMOCK_ROOT}
-        ${PROJECT_SOURCE_DIR}/${GOOGLEMOCK_ROOT}/include
-)
-
-set(GOOGLETEST_SOURCES
-        ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/src/gtest-all.cc
-        ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/src/gtest_main.cc
-        ${PROJECT_SOURCE_DIR}/${GOOGLEMOCK_ROOT}/src/gmock-all.cc
-        ${PROJECT_SOURCE_DIR}/${GOOGLEMOCK_ROOT}/src/gmock_main.cc
-        )
-
-foreach (_source ${GOOGLETEST_SOURCES})
-    set_source_files_properties(${_source} PROPERTIES GENERATED 1)
-endforeach ()
-
-add_library(googletest ${GOOGLETEST_SOURCES})
-add_library(googlemock ${GOOGLETEST_SOURCES})
-# --- Google test stuff
-
+add_subdirectory(external/googletest)
 add_subdirectory(tests)
+
+## --- Google test stuff
+#set(GOOGLETEST_ROOT ${PROJECT_SOURCE_DIR}/external/googletest/googletest CACHE STRING "Google Test source root")
+#set(GOOGLEMOCK_ROOT ${PROJECT_SOURCE_DIR}/external/googletest/googlemock CACHE STRING "Google Mock source root")
+#
+#include_directories(
+#        ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}
+#        ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/include
+#        ${PROJECT_SOURCE_DIR}/${GOOGLEMOCK_ROOT}
+#        ${PROJECT_SOURCE_DIR}/${GOOGLEMOCK_ROOT}/include
+#)
+#
+#set(GOOGLETEST_SOURCES
+#        ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/src/gtest-all.cc
+#        ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/src/gtest_main.cc
+#        ${PROJECT_SOURCE_DIR}/${GOOGLEMOCK_ROOT}/src/gmock-all.cc
+#        ${PROJECT_SOURCE_DIR}/${GOOGLEMOCK_ROOT}/src/gmock_main.cc
+#        )
+#
+#foreach (_source ${GOOGLETEST_SOURCES})
+#    set_source_files_properties(${_source} PROPERTIES GENERATED 1)
+#endforeach ()
+#
+#add_library(googletest ${GOOGLETEST_SOURCES})
+#add_library(googlemock ${GOOGLETEST_SOURCES})
+## --- Google test stuff
 
