--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/googletest"]
-	path = external/googletest
+	path = tests/external/googletest
 	url = https://github.com/google/googletest.git
