Small fix to add sources to parent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
+# Project name and versions
 project(SymbolicIntegers)
 set(SYMBOLIC_INTEGERS_MAJOR_VERSION 0)
 set(SYMBOLIC_INTEGERS_VERSION 9)
@@ -7,26 +8,16 @@ set(SYMBOLIC_INTEGERS_VERSION 1)
 set(SYMBOLIC_INTEGERS_VERSION
         ${SYMBOLIC_INTEGERS_MAJOR_VERSION}.${SYMBOLIC_INTEGERS_MINOR_VERSION}.${SYMBOLIC_INTEGERS_PATCH_VERSION})
 
-## Offer the user the choice of overriding the installation directories
-#set(INSTALL_LIB_DIR lib CACHE PATH "Installation directory for libraries")
-#set(INSTALL_BIN_DIR bin CACHE PATH "Installation directory for executables")
-#set(INSTALL_INCLUDE_DIR include CACHE PATH
-#        "Installation directory for header files")
-#if(WIN32 AND NOT CYGWIN)
-#    set(DEF_INSTALL_CMAKE_DIR CMake)
-#else()
-#    set(DEF_INSTALL_CMAKE_DIR lib/CMake/FooBar)
-#endif()
-#set(INSTALL_CMAKE_DIR ${DEF_INSTALL_CMAKE_DIR} CACHE PATH
-#        "Installation directory for CMake files")
-#
-## Make relative paths absolute (needed later on)
-#foreach(p LIB BIN INCLUDE CMAKE)
-#    set(var INSTALL_${p}_DIR)
-#    if(NOT IS_ABSOLUTE "${${var}}")
-#        set(${var} "${CMAKE_INSTALL_PREFIX}/${${var}}")
-#    endif()
-#endforeach()
+# Include directory
+include_directories(${PROJECT_SOURCE_DIR}/include)
+# Source files
+set(SYMBOLIC_INTEGERS_SOURCES
+        ${PROJECT_SOURCE_DIR}/src/base.cpp
+        ${PROJECT_SOURCE_DIR}/src/monomial_ops.cpp
+        ${PROJECT_SOURCE_DIR}/src/polynomial_ops.cpp
+        ${PROJECT_SOURCE_DIR}/src/extra_ops.cpp)
+# Append them to ALL_SOURCES
+list(APPEND ALL_SOURCES ${SYMBOLIC_INTEGERS_SOURCES})
 
 if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
     # Standalone build
@@ -43,15 +34,10 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
         set(CMAKE_CXX_FLAGS_RELEASE "-O3")
     endif()
 else()
+    # Build under another project umbrealla
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/symints")
+    set (ALL_SOURCES ${ALL_SOURCES} PARENT_SCOPE)
 endif()
-
-include_directories(${PROJECT_SOURCE_DIR}/include)
-set(SYMBOLIC_INTEGERS_SOURCES
-        ${PROJECT_SOURCE_DIR}/src/base.cpp
-        ${PROJECT_SOURCE_DIR}/src/monomial_ops.cpp
-        ${PROJECT_SOURCE_DIR}/src/polynomial_ops.cpp
-        ${PROJECT_SOURCE_DIR}/src/extra_ops.cpp)
 
 # Build libs (static by default)
 if(SYMINT_SHARED)
